# browser-render-rust

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs
.githooks/: pre-push
docs/: rust-logi-integration.md
proto/: browser_render.proto
scripts/: deploy-kagoya.sh  deploy.sh  disk-check.sh  etc-scrape-batch.sh  gce-setup.sh  vehicle-fetch.sh
src/: config.rs  grpc_web_client.rs  lib.rs  logging.rs  main.rs
src/browser/: renderer.rs
src/jobs/: manager.rs
src/server/: grpc.rs  grpc_json.rs  grpc_web_json.rs  http.rs  mod.rs
src/storage/: sqlite.rs
tests/: browser_integration_test.rs
