[workspace]
members = [".", "rust-scraper"]
resolver = "2"

[package]
name = "browser-render"
version = "0.1.0"
edition = "2021"
authors = ["yhonda-ohishi"]
description = "Browser automation service for vehicle data extraction"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "signal"] }

# Web framework
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }

# gRPC (optional, requires protoc)
tonic = { version = "0.12", optional = true, features = ["tls", "tls-webpki-roots"] }
tonic-reflection = { version = "0.12", optional = true }
tonic-web = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }
http-body-util = { version = "0.1", optional = true }
bytes = { version = "1", optional = true }
http-body = { version = "1", optional = true }
http = { version = "1", optional = true }
async-stream = { version = "0.3", optional = true }
tokio-stream = { version = "0.1", optional = true }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Browser automation
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
dotenvy = "0.15"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "time"] }
tracing-appender = "0.2"
thiserror = "2"
anyhow = "1"
regex = "1"
base64 = "0.22"
async-trait = "0.1"

# ETC Scraper (local workspace member)
scraper-service = { path = "rust-scraper" }

[build-dependencies]
tonic-build = { version = "0.12", optional = true }

[features]
default = []
grpc = ["tonic", "tonic-reflection", "tonic-web", "prost", "tonic-build", "http-body-util", "bytes", "http-body", "http", "async-stream", "tokio-stream"]

[dev-dependencies]
tempfile = "3"
dotenvy = "0.15"

[lib]
name = "browser_render"
path = "src/lib.rs"

[[bin]]
name = "browser-render"
path = "src/main.rs"
